contrast issue

--- a/chamber/styles/base.css
+++ b/chamber/styles/base.css
@@ -230,20 +230,18 @@ input:checked + .slider {
     font-size:16px;
 }
 
-.events h1 {
-    background-color: #2196F3;
-    color: white;
-    padding: 20px;
-    text-align: center;
-}
 
 .events h2 {
     background-color: #2196F3;
     color: white;
     padding: 10px; 
+    font-size:16px;
+
 }
 
 span {
     background-color: #2196F3;
     color: white;
+    font-size:16px;
+
 }
